--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -27,6 +27,9 @@ on:
         required: false
         default: 'false'
 
+env:
+  ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
+
 jobs:
   build:
     name: Build APK
@@ -40,7 +43,47 @@ jobs:
         uses: actions/checkout@v4
       
       # =========================================
-      # 步骤2: 设置Python环境
+      # 步骤2: 安装Android SDK命令行工具
+      # =========================================
+      - name: Install Android SDK Command Line Tools
+        run: |
+          echo "📦 Installing Android SDK Command Line Tools..."
+          sudo apt-get update
+          sudo apt-get install -y android-sdk
+          echo "✅ Android SDK Command Line Tools installed!"
+      
+      # =========================================
+      # 步骤3: 设置Android SDK环境变量
+      # =========================================
+      - name: Setup Android SDK Environment
+        run: |
+          echo "🔧 Setting up Android SDK environment..."
+          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
+          echo "ANDROID_HOME=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
+          echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
+          echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
+          echo "✅ Android SDK environment configured!"
+      
+      # =========================================
+      # 步骤4: 接受Android SDK许可
+      # =========================================
+      - name: Accept Android SDK licenses
+        run: |
+          echo "📜 Accepting Android SDK licenses..."
+          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses
+          echo "✅ SDK licenses accepted!"
+      
+      # =========================================
+      # 步骤5: 安装build-tools
+      # =========================================
+      - name: Install Android build-tools
+        run: |
+          echo "📥 Installing Android build-tools..."
+          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager "build-tools;34.0.0"
+          echo "✅ build-tools installed!"
+      
+      # =========================================
+      # 步骤6: 设置Python环境
       # =========================================
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -48,7 +91,7 @@ jobs:
           python-version: '3.10'
       
       # =========================================
-      # 步骤3: 安装系统依赖
+      # 步骤7: 安装系统依赖
       # =========================================
       - name: Install System Dependencies
         run: |
@@ -84,7 +127,7 @@ jobs:
             lld
       
       # =========================================
-      # 步骤4: 安装Python依赖
+      # 步骤8: 安装Python依赖
       # =========================================
       - name: Install Python Dependencies
         run: |
@@ -96,7 +139,7 @@ jobs:
             kivy==2.2.1
       
       # =========================================
-      # 步骤5: 下载Vosk模型
+      # 步骤9: 下载Vosk模型
       # =========================================
       - name: Download Vosk Model
         run: |
@@ -106,7 +149,7 @@ jobs:
           echo "✅ Vosk model downloaded successfully!"
       
       # =========================================
-      # 步骤6: 配置Buildozer缓存
+      # 步骤10: 配置Buildozer缓存
       # =========================================
       - name: Cache Buildozer
         uses: actions/cache@v4
@@ -119,82 +162,15 @@ jobs:
             ${{ runner.os }}-buildozer-
       
       # =========================================
-      # 步骤7: 设置Android SDK环境
-      # =========================================
-      - name: Setup Android SDK
-        run: |
-          echo "📦 Setting up Android SDK..."
-          # 设置ANDROID_HOME环境变量
-          export ANDROID_HOME=$HOME/.android/sdk
-          export ANDROID_SDK_ROOT=$ANDROID_HOME
-          mkdir -p $ANDROID_HOME/cmdline-tools
-          
-          # 下载Android命令行工具
-          wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip -q cmdline-tools.zip -d $ANDROID_HOME/cmdline-tools
-          mv $ANDROID_HOME/cmdline-tools/cmdline-tools $ANDROID_HOME/cmdline-tools/latest
-          
-          # 添加到PATH
-          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
-          
-          echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
-          echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
-          echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
-          echo "$ANDROID_HOME/platform-tools" >> $GITHUB_PATH
-          
-          echo "✅ Android SDK environment configured!"
-      
-      # =========================================
-      # 步骤8: 接受Android SDK许可
-      # =========================================
-      - name: Accept Android SDK licenses
-        run: |
-          echo "📜 Accepting Android SDK licenses..."
-          export ANDROID_HOME=$HOME/.android/sdk
-          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
-          
-          # 创建licenses目录
-          mkdir -p $ANDROID_HOME/licenses
-          
-          # 预先接受所有许可（写入许可hash）
-          echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > $ANDROID_HOME/licenses/android-sdk-license
-          echo "84831b9409646a918e30573bab4c9c91346d8abd" >> $ANDROID_HOME/licenses/android-sdk-license
-          echo "d56f5187479451eabf01fb78af6dfcb131a6481e" >> $ANDROID_HOME/licenses/android-sdk-license
-          
-          # 使用sdkmanager接受所有许可
-          yes | sdkmanager --licenses || true
-          
-          echo "✅ SDK licenses accepted!"
-      
-      # =========================================
-      # 步骤9: 安装Android SDK组件
-      # =========================================
-      - name: Install Android SDK Components
-        run: |
-          echo "📥 Installing Android SDK components..."
-          export ANDROID_HOME=$HOME/.android/sdk
-          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
-          
-          # 安装必要的SDK组件
-          sdkmanager --install \
-            "platform-tools" \
-            "platforms;android-33" \
-            "build-tools;33.0.2" \
-            "ndk;25.2.9519653"
-          
-          echo "✅ Android SDK components installed!"
-      
-      # =========================================
-      # 步骤10: 初始化Buildozer
+      # 步骤11: 初始化Buildozer
       # =========================================
       - name: Initialize Buildozer
         run: |
           echo "🔧 Initializing Buildozer..."
-          # 再次通过buildozer接受许可（确保完整性）
           yes | buildozer android licenses || true
       
       # =========================================
-      # 步骤11: 构建APK
+      # 步骤12: 构建APK
       # =========================================
       - name: Build APK
         run: |
@@ -202,13 +178,12 @@ jobs:
           echo "This may take 15-30 minutes on first build..."
           buildozer -v android debug
         env:
-          # 禁用交互式提示
           BUILDOZER_WARN_ON_ROOT: 0
-          ANDROID_HOME: ${{ env.ANDROID_HOME }}
-          ANDROID_SDK_ROOT: ${{ env.ANDROID_HOME }}
+          ANDROID_HOME: ${{ env.ANDROID_SDK_ROOT }}
+          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
       
       # =========================================
-      # 步骤12: 上传APK产物
+      # 步骤13: 上传APK产物
       # =========================================
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
@@ -218,7 +193,7 @@ jobs:
           retention-days: 30
       
       # =========================================
-      # 步骤13: 构建摘要
+      # 步骤14: 构建摘要
       # =========================================
       - name: Build Summary
         run: |
@@ -235,4 +210,3 @@ jobs:
           echo "- This APK is a **debug build**" >> $GITHUB_STEP_SUMMARY
           echo "- Supports **ARM64** devices" >> $GITHUB_STEP_SUMMARY
           echo "- Requires **Android 7.0+** (API 24)" >> $GITHUB_STEP_SUMMARY
-
