--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,8 +1,11 @@
 # =============================================================================
-# GitHub Actions - 自动打包 Android APK
+# GitHub Actions - 自动打包 Android APK（终极解决方案）
 # =============================================================================
 # 【重要声明】本配置文件仅属于「teleprompter」仓库！
 # 与现有网站仓库无任何代码/配置交集，无冲突风险！
+#
+# 技术栈：Kivy + Vosk + Buildozer
+# 使用：android-actions/setup-android 自动配置SDK/许可/工具
 #
 # 触发条件：
 # - 推送到main分支
@@ -27,8 +30,13 @@ on:
         required: false
         default: 'false'
 
+# =============================================================================
+# 全局环境变量 - 统一Android SDK路径，解决路径不统一问题
+# =============================================================================
 env:
   ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
+  ANDROID_HOME: /usr/local/lib/android/sdk
+  ANDROID_NDK_HOME: /usr/local/lib/android/sdk/ndk/25.2.9519653
 
 jobs:
   build:
@@ -38,52 +46,68 @@ jobs:
     steps:
       # =========================================
       # 步骤1: 检出代码
+      # 作用：从GitHub仓库拉取teleprompter项目代码
       # =========================================
       - name: Checkout Repository
         uses: actions/checkout@v4
       
       # =========================================
-      # 步骤2: 安装Android SDK命令行工具
+      # 步骤2: 设置Java环境
+      # 作用：安装JDK 17，Android打包必需
       # =========================================
-      - name: Install Android SDK Command Line Tools
-        run: |
-          echo "📦 Installing Android SDK Command Line Tools..."
-          sudo apt-get update
-          sudo apt-get install -y android-sdk
-          echo "✅ Android SDK Command Line Tools installed!"
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
       
       # =========================================
-      # 步骤3: 设置Android SDK环境变量
+      # 步骤3: 配置Android SDK（核心步骤）
+      # 作用：使用android-actions/setup-android自动完成：
+      #       - 配置SDK路径
+      #       - 自动接受所有SDK许可（解决许可问题）
+      #       - 设置环境变量
       # =========================================
-      - name: Setup Android SDK Environment
-        run: |
-          echo "🔧 Setting up Android SDK environment..."
-          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
-          echo "ANDROID_HOME=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
-          echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
-          echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
-          echo "✅ Android SDK environment configured!"
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+        with:
+          accept-android-sdk-licenses: true
       
       # =========================================
-      # 步骤4: 接受Android SDK许可
+      # 步骤4: 安装Android SDK组件
+      # 作用：安装打包所需的所有SDK组件：
+      #       - build-tools;34.0.0（编译工具，解决build-tools缺失）
+      #       - platform-tools（ADB等工具）
+      #       - platforms;android-34（目标平台）
+      #       - ndk;25.2.9519653（原生开发工具包，Kivy必需）
       # =========================================
-      - name: Accept Android SDK licenses
+      - name: Install Android SDK Components
         run: |
-          echo "📜 Accepting Android SDK licenses..."
-          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses
-          echo "✅ SDK licenses accepted!"
+          echo "📦 Installing Android SDK components..."
+          sdkmanager --install "build-tools;34.0.0"
+          sdkmanager --install "platform-tools"
+          sdkmanager --install "platforms;android-34"
+          sdkmanager --install "ndk;25.2.9519653"
+          echo "✅ All SDK components installed!"
       
       # =========================================
-      # 步骤5: 安装build-tools
+      # 步骤5: 验证Android环境
+      # 作用：打印环境变量和已安装组件，便于调试
       # =========================================
-      - name: Install Android build-tools
+      - name: Verify Android Environment
         run: |
-          echo "📥 Installing Android build-tools..."
-          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager "build-tools;34.0.0"
-          echo "✅ build-tools installed!"
+          echo "🔍 Verifying Android environment..."
+          echo "ANDROID_SDK_ROOT: $ANDROID_SDK_ROOT"
+          echo "ANDROID_HOME: $ANDROID_HOME"
+          echo "ANDROID_NDK_HOME: $ANDROID_NDK_HOME"
+          echo ""
+          echo "📋 Installed SDK components:"
+          sdkmanager --list_installed
+          echo "✅ Android environment verified!"
       
       # =========================================
       # 步骤6: 设置Python环境
+      # 作用：安装Python 3.10，Kivy/Buildozer运行环境
       # =========================================
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -92,6 +116,11 @@ jobs:
       
       # =========================================
       # 步骤7: 安装系统依赖
+      # 作用：安装Kivy和Buildozer编译所需的系统库：
+      #       - SDL2系列（图形/音频）
+      #       - FFmpeg（媒体处理）
+      #       - GStreamer（多媒体框架）
+      #       - 编译工具链
       # =========================================
       - name: Install System Dependencies
         run: |
@@ -122,24 +151,29 @@ jobs:
             pkg-config \
             zip \
             unzip \
-            openjdk-17-jdk \
             wget \
-            lld
+            lld \
+            ccache
       
       # =========================================
       # 步骤8: 安装Python依赖
+      # 作用：安装Buildozer和Kivy打包工具链：
+      #       - buildozer（Android打包工具）
+      #       - cython 0.29.33（兼容版本，避免编译错误）
+      #       - kivy 2.2.1（UI框架）
       # =========================================
       - name: Install Python Dependencies
         run: |
-          pip install --upgrade pip
+          pip install --upgrade pip wheel setuptools
           pip install \
-            buildozer \
+            buildozer==1.5.0 \
             cython==0.29.33 \
             virtualenv \
             kivy==2.2.1
       
       # =========================================
-      # 步骤9: 下载Vosk模型
+      # 步骤9: 下载Vosk语音模型
+      # 作用：下载提词器项目所需的Vosk英语语音识别模型
       # =========================================
       - name: Download Vosk Model
         run: |
@@ -150,6 +184,7 @@ jobs:
       
       # =========================================
       # 步骤10: 配置Buildozer缓存
+      # 作用：缓存Buildozer下载的依赖，加速后续构建
       # =========================================
       - name: Cache Buildozer
         uses: actions/cache@v4
@@ -162,15 +197,40 @@ jobs:
             ${{ runner.os }}-buildozer-
       
       # =========================================
-      # 步骤11: 初始化Buildozer
+      # 步骤11: 配置Buildozer环境变量
+      # 作用：将Android SDK/NDK路径写入环境，
+      #       确保Buildozer能正确识别安卓环境
+      # =========================================
+      - name: Configure Buildozer Environment
+        run: |
+          echo "🔧 Configuring Buildozer environment..."
+          # 创建.buildozer目录
+          mkdir -p ~/.buildozer/android/platform
+          
+          # 写入环境变量到bashrc确保子进程可用
+          echo "export ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> ~/.bashrc
+          echo "export ANDROID_HOME=$ANDROID_HOME" >> ~/.bashrc
+          echo "export ANDROID_NDK_HOME=$ANDROID_NDK_HOME" >> ~/.bashrc
+          echo "export PATH=\$PATH:$ANDROID_SDK_ROOT/tools:$ANDROID_SDK_ROOT/platform-tools" >> ~/.bashrc
+          
+          echo "✅ Buildozer environment configured!"
+      
+      # =========================================
+      # 步骤12: 初始化Buildozer并接受许可
+      # 作用：通过Buildozer再次确认SDK许可已接受
       # =========================================
       - name: Initialize Buildozer
         run: |
           echo "🔧 Initializing Buildozer..."
-          yes | buildozer android licenses || true
+          yes | buildozer android licenses 2>/dev/null || true
+          echo "✅ Buildozer initialized!"
       
       # =========================================
-      # 步骤12: 构建APK
+      # 步骤13: 构建APK（核心构建步骤）
+      # 作用：使用Buildozer编译Android APK
+      #       - 传入所有必要的环境变量
+      #       - 使用-v参数显示详细日志
+      #       - 首次构建约需15-30分钟
       # =========================================
       - name: Build APK
         run: |
@@ -179,11 +239,17 @@ jobs:
           buildozer -v android debug
         env:
           BUILDOZER_WARN_ON_ROOT: 0
-          ANDROID_HOME: ${{ env.ANDROID_SDK_ROOT }}
           ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+          ANDROID_HOME: ${{ env.ANDROID_HOME }}
+          ANDROID_NDK_HOME: ${{ env.ANDROID_NDK_HOME }}
+          # 指定NDK版本，避免自动下载
+          ANDROIDNDK: ${{ env.ANDROID_NDK_HOME }}
+          ANDROIDSDK: ${{ env.ANDROID_SDK_ROOT }}
       
       # =========================================
-      # 步骤13: 上传APK产物
+      # 步骤14: 上传APK产物
+      # 作用：将编译好的APK上传为GitHub Artifact
+      #       保留30天，可从Actions页面下载
       # =========================================
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
@@ -191,9 +257,11 @@ jobs:
           name: teleprompter-apk
           path: bin/*.apk
           retention-days: 30
+          if-no-files-found: error
       
       # =========================================
-      # 步骤14: 构建摘要
+      # 步骤15: 构建摘要
+      # 作用：在GitHub Actions Summary页面显示构建信息
       # =========================================
       - name: Build Summary
         run: |
@@ -201,12 +269,18 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 📱 APK Information" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          ls -lh bin/*.apk >> $GITHUB_STEP_SUMMARY 2>/dev/null || echo "APK files listed above"
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          ls -lh bin/*.apk 2>/dev/null || echo "APK file generated"
+          ls -lh bin/*.apk >> $GITHUB_STEP_SUMMARY 2>/dev/null || echo "Check artifacts for APK" >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 📥 Download" >> $GITHUB_STEP_SUMMARY
           echo "Download the APK from the **Artifacts** section above." >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📋 Notes" >> $GITHUB_STEP_SUMMARY
-          echo "- This APK is a **debug build**" >> $GITHUB_STEP_SUMMARY
-          echo "- Supports **ARM64** devices" >> $GITHUB_STEP_SUMMARY
-          echo "- Requires **Android 7.0+** (API 24)" >> $GITHUB_STEP_SUMMARY
+          echo "### 📋 Build Details" >> $GITHUB_STEP_SUMMARY
+          echo "- **Build Type:** Debug" >> $GITHUB_STEP_SUMMARY
+          echo "- **Architecture:** ARM64" >> $GITHUB_STEP_SUMMARY
+          echo "- **Min Android:** 7.0+ (API 24)" >> $GITHUB_STEP_SUMMARY
+          echo "- **Target Android:** 14 (API 34)" >> $GITHUB_STEP_SUMMARY
+          echo "- **Build Tools:** 34.0.0" >> $GITHUB_STEP_SUMMARY
+          echo "- **NDK Version:** 25.2.9519653" >> $GITHUB_STEP_SUMMARY
