不知道改什么了18

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,8 +1,8 @@
 # =============================================================================
-# GitHub Actions - Android APK Build (v6.0 - 修复JAXB问题)
+# GitHub Actions - Android APK Build (v6.0 极简版)
 # =============================================================================
-# 修复日志错误：javax.xml.bind.annotation.XmlSchema 类缺失
-# 方案：使用JDK 11 + 删除旧版tools目录，强制使用新版cmdline-tools
+# 修复：JDK17缺JAXB、旧版tools不兼容、符号链接冲突、日志未生成
+# 步骤数：12步 | 行数：<180行
 # =============================================================================
 name: Build Android APK
 
@@ -22,180 +22,92 @@ jobs:
       ANDROID_NDK_VERSION: 25.2.9519653
 
     steps:
-      # ===========================================
       # 步骤1：拉取代码
-      # ===========================================
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      # ===========================================
-      # 步骤2：设置Python
-      # ===========================================
+      # 步骤2：设置Python 3.10
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
-      # ===========================================
-      # 步骤3：设置JDK 11（修复JAXB问题）
-      # 修复日志错误：javax.xml.bind.annotation.XmlSchema 类缺失
-      # JDK 17移除了JAXB模块，降级到JDK 11可解决
-      # ===========================================
+      # 步骤3：设置JDK 11（修复JAXB缺失问题）
       - name: Setup JDK 11
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '11'
 
-      - name: Verify Java Version
-        run: |
-          echo "=== Java Version ==="
-          java -version
-          echo "JAVA_HOME: $JAVA_HOME"
+      # 步骤4：验证Java版本
+      - name: Verify Java
+        run: java -version
 
-      # ===========================================
-      # 步骤4：设置Android SDK
-      # ===========================================
+      # 步骤5：设置Android SDK
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
         with:
           accept-android-sdk-licenses: true
 
-      # ===========================================
-      # 步骤5：修复SDK tools问题 + 安装组件
-      # 修复日志错误：旧版sdkmanager与JDK不兼容
-      # 方案：删除旧版tools目录，强制使用新版cmdline-tools
-      # ===========================================
-      - name: Fix SDK Tools and Install Components
+      # 步骤6：修复SDK + 安装组件
+      - name: Fix SDK and Install Components
         run: |
-          echo "=== 删除旧版tools目录（解决JAXB兼容问题） ==="
           rm -rf $ANDROID_SDK_ROOT/tools
-          echo "✓ 旧版tools已删除"
-          
-          echo ""
-          echo "=== 验证cmdline-tools可用 ==="
-          which sdkmanager
-          sdkmanager --version
-          
-          echo ""
-          echo "=== 接受所有许可 ==="
           yes | sdkmanager --licenses || true
-          
-          echo ""
-          echo "=== 安装SDK组件 ==="
-          sdkmanager "platform-tools"
-          sdkmanager "platforms;android-33"
-          sdkmanager "build-tools;33.0.2"
-          sdkmanager "ndk;$ANDROID_NDK_VERSION"
-          
-          echo ""
-          echo "=== 写入许可文件 ==="
+          sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2" "ndk;$ANDROID_NDK_VERSION"
           mkdir -p $ANDROID_SDK_ROOT/licenses
-          echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55\nd56f5187479451eabf01fb78af6dfcb131a6481e\n24333f8a63b6825ea9c5514f83c2829b004d1fee" > $ANDROID_SDK_ROOT/licenses/android-sdk-license
-          
-          echo ""
-          echo "=== 验证安装 ==="
-          ls -la $ANDROID_SDK_ROOT/build-tools/
-          ls -la $ANDROID_SDK_ROOT/platforms/
+          echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55\nd56f5187479451eabf01fb78af6dfcb131a6481e" > $ANDROID_SDK_ROOT/licenses/android-sdk-license
 
-      # ===========================================
-      # 步骤6：安装系统依赖
-      # 修复日志错误：ssl module in Python is not available
-      # ===========================================
+      # 步骤7：安装系统依赖（含SSL修复）
       - name: Install System Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
-            build-essential git zip unzip \
-            python3-pip python3-dev libssl-dev \
-            libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev \
-            libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev \
+          sudo apt-get install -y build-essential git zip unzip python3-pip python3-dev libssl-dev \
+            libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev \
+            libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev libffi-dev \
             libgstreamer1.0-dev gstreamer1.0-plugins-base libgstreamer-plugins-base1.0-dev \
-            libffi-dev autoconf automake libtool cmake ccache lld wget
+            autoconf automake libtool cmake ccache lld wget
 
-      # ===========================================
-      # 步骤7：安装Python依赖
-      # ===========================================
+      # 步骤8：安装Python依赖
       - name: Install Python Dependencies
         run: |
           pip install --upgrade pip wheel setuptools
           pip install buildozer==1.5.0 cython==0.29.33 kivy==2.2.1
-          echo ""
-          echo "=== 验证pip无SSL警告 ==="
-          pip --version
 
-      # ===========================================
-      # 步骤8：下载Vosk模型
-      # ===========================================
+      # 步骤9：下载Vosk模型
       - name: Download Vosk Model
         run: |
           wget -q https://alphacephei.com/vosk/models/vosk-model-small-en-us-0.15.zip
           unzip -q vosk-model-small-en-us-0.15.zip
 
-      # ===========================================
-      # 步骤9：配置Buildozer SDK目录
-      # 修复日志错误：ln: failed to create symbolic link...File exists
-      # ===========================================
+      # 步骤10：配置Buildozer SDK（修复符号链接冲突）
       - name: Setup Buildozer SDK
         run: |
-          echo "=== 彻底清理旧缓存 ==="
-          rm -rf ~/.buildozer
-          rm -rf .buildozer
-          
-          echo "=== 创建目录结构 ==="
+          rm -rf ~/.buildozer .buildozer
           mkdir -p ~/.buildozer/android/platform
-          
-          echo "=== 创建SDK符号链接 ==="
           ln -sf $ANDROID_SDK_ROOT ~/.buildozer/android/platform/android-sdk
-          
-          echo "=== 验证符号链接 ==="
-          ls -la ~/.buildozer/android/platform/
-          ls -la ~/.buildozer/android/platform/android-sdk/build-tools/
 
-      # ===========================================
-      # 步骤10：打印Buildozer配置
-      # ===========================================
-      - name: Print Buildozer Config
-        run: |
-          echo "=== Buildozer实际配置 ==="
-          buildozer android printconf || echo "printconf命令不可用，显示spec文件："
-          echo ""
-          echo "=== buildozer.spec关键配置 ==="
-          grep -E "^(android\.|p4a\.|requirements)" buildozer.spec | head -25
-
-      # ===========================================
-      # 步骤11：构建APK
-      # ===========================================
+      # 步骤11：构建APK（强制生成日志）
       - name: Build APK
         id: build
         run: |
           export PATH="$ANDROID_SDK_ROOT/build-tools/33.0.2:$ANDROID_SDK_ROOT/platform-tools:$PATH"
-          set +e
-          buildozer android debug --verbose 2>&1 | tee buildozer_final.log
-          BUILD_CODE=$?
-          set -e
-          
+          buildozer android debug --verbose 2>&1 | tee buildozer-final.log || true
           if ls bin/*.apk 1>/dev/null 2>&1; then
             echo "apk_exists=true" >> $GITHUB_OUTPUT
           else
             echo "apk_exists=false" >> $GITHUB_OUTPUT
           fi
-          
-          echo ""
-          echo "=== 构建日志最后100行 ==="
-          tail -100 buildozer_final.log
         env:
           BUILDOZER_WARN_ON_ROOT: 0
 
-      # ===========================================
       # 步骤12：上传日志和APK
-      # ===========================================
-      - name: Upload Build Log
+      - name: Upload Log
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: build-log
-          path: buildozer_final.log
+          path: buildozer-final.log
           if-no-files-found: warn
 
       - name: Upload APK
@@ -205,15 +117,11 @@ jobs:
           name: teleprompter-apk
           path: bin/*.apk
 
-      - name: Build Result
+      - name: Result
         if: always()
         run: |
           if [ "${{ steps.build.outputs.apk_exists }}" == "true" ]; then
-            echo "✅ APK生成成功！"
-            ls -lh bin/*.apk
+            echo "✅ APK生成成功"; ls -lh bin/*.apk
           else
-            echo "❌ APK生成失败，请下载build-log查看详细错误"
-            echo "=== 错误摘要 ==="
-            grep -i "error\|failed\|exception" buildozer_final.log | tail -30 || true
-            exit 1
+            echo "❌ 构建失败，请下载build-log查看"; exit 1
           fi
